--- a/index.html
+++ b/index.html
@@ -1,3 +1,32 @@
 
-fhggfdhgg
-fhgfhijgh
+<!DOCTYPE html>
+<html lang="es">
+    <head>
+        <link rel="icon" href="LaLiga_EA_Sports_2023_Vertical_Logo.svg.png">
+        <link rel="stylesheet" href="style.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Equipos de LaLiga EA Sports</title>
+    </head>
+    <body>
+        <section class="Introducción">
+            <div class="encabezado">
+                <h1>Equipos de LaLiga</h1>
+                <h3>España</h3>
+                <img class="bandera" src="Bandera_de_España.svg.webp" alt="Bandera España">
+            </div>
+            <div class="contenido">
+                <p>LaLiga española es una de las mejores ligas del mundo, por no decir la mejor.</p>
+                <ul>
+                    <h4>Mejores equipos de la competición:</h4>
+                    <li>Real madrid</li>
+                    <li>FC Barcelona</li>
+                    <li>Atlético de madrid</li>
+                    <li>Valencia CF</li>
+                </ul>
+                <h4>Logo de LaLiga</h4>
+                <img class="logo_liga" src="LaLiga_EA_Sports_2023_Vertical_Logo.svg.png" alt="Logo LaLiga EA Sports">
+            </div>
+        </section>
+    </body>
+</html>
