--- a/index.html
+++ b/index.html
@@ -17,16 +17,21 @@
             </div>
             <div class="contenido">
                 <p>LaLiga española es una de las mejores ligas del mundo, por no decir la mejor.</p>
-                <ul>
-                    <h4>Mejores equipos de la competición:</h4>
-                    <li>Real madrid</li>
-                    <li>FC Barcelona</li>
-                    <li>Atlético de madrid</li>
-                    <li>Valencia CF</li>
-                </ul>
-                <h4>Logo de LaLiga</h4>
+                    <ul>
+                        <h4 class="titulo_lista">Mejores equipos de la competición:</h4>
+                        <div class="lista">
+                            <li><span class="madrid">Real Madrid</span></li>
+                            <li><span class="barca">Barcelona</span></li>
+                            <li><span class="atleti">Atlético de madrid</span></li>
+                            <li><span class="valencia">Valencia CF</span></li>
+                        </div>
+                    </ul>
+                <h4 class="titulo_liga">Logo de LaLiga</h4>
                 <img class="logo_liga" src="LaLiga_EA_Sports_2023_Vertical_Logo.svg.png" alt="Logo LaLiga EA Sports">
             </div>
         </section>
+        <div class="menu_lateral">
+            <h5></h5>
+        </div>
     </body>
 </html>
