--- a/index.html
+++ b/index.html
@@ -16,22 +16,35 @@
                 <img class="bandera" src="Bandera_de_España.svg.webp" alt="Bandera España">
             </div>
             <div class="contenido">
-                <p>LaLiga española es una de las mejores ligas del mundo, por no decir la mejor.</p>
-                    <ul>
+                <p id="definición">LaLiga española es una de las mejores ligas del mundo, por no decir la mejor.</p>
+                    <ul class="lista_equipos" id="mejores_equipos">
                         <h4 class="titulo_lista">Mejores equipos de la competición:</h4>
                         <div class="lista">
-                            <li><span class="madrid">Real Madrid</span></li>
-                            <li><span class="barca">Barcelona</span></li>
-                            <li><span class="atleti">Atlético de madrid</span></li>
-                            <li><span class="valencia">Valencia CF</span></li>
+                            <li class="equipos"><span class="madrid">Real Madrid</span></li>
+                            <li class="equipos"><span class="barca">Barcelona</span></li>
+                            <li class="equipos"><span class="atleti">Atlético de madrid</span></li>
+                            <li class="equipos"><span class="valencia">Valencia CF</span></li>
                         </div>
                     </ul>
-                <h4 class="titulo_liga">Logo de LaLiga</h4>
+                <h4 id="logo" class="titulo_liga">Logo de LaLiga</h4>
                 <img class="logo_liga" src="LaLiga_EA_Sports_2023_Vertical_Logo.svg.png" alt="Logo LaLiga EA Sports">
             </div>
         </section>
         <div class="menu_lateral">
-            <h5></h5>
+            <h4>Menu</h4>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#definición">Definición</a>
+                    </li>
+                    <li>
+                        <a href="#mejores_equipos">Mejores equipos</a>
+                    </li>
+                    <li>
+                        <a href="#logo">Logo LaLiga</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </body>
 </html>
