--- a/index.html
+++ b/index.html
@@ -47,4 +47,7 @@
             </nav>
         </div>
     </body>
+    <div class="footer">
+        <footer>Creado por Álvaro Matas Adam</footer>
+    </div>
 </html>
